--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <table id="myTable" class="w3-table-all">
   <tr>
-    <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(1)')" style="cursor:pointer">Event Name</th>
-    <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(2)')" style="cursor:pointer">Year Started</th>
+    <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(1)')" style="cursor:pointer">Name</th>
+    <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(2)')" style="cursor:pointer">Started</th>
     <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Type</th>
     <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(4)')" style="cursor:pointer">Category</th>
     <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(5)')" style="cursor:pointer">Published</th>
@@ -64,11 +64,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </tr>
   <tr class="item">
     <td><a href="http://sites.ieee.org/pes-pscc/" target="_blank">IEEE-PES Technical Committee on Communications and Cybersecurity (PSCC)<sup>1</sup></a></td>
-    <td>2002</td><td>M</td><td>E&S, S</td><td>Yes</td><td>No</td>
+    <td>2002</td><td>M</td><td>E&S, S</td><td>No</td><td>No</td>
   </tr>
   <tr class="item">
-    <td><a href="http://pes-gm.org/" target="_blank">gfgf</a></td>
-    <td>Sweden</td><td>Berglunds snabbköp</td><td>Sweden</td><td>No</td><td>4</td>
+    <td><a href="https://www.nerc.com/comm/CIPC/Pages/default.aspx" target="_blank">NERC Critical Infrastructure Protection Committee Meetings</a></td>
+    <td>2003</td><td>M</td><td>S</td><td>No</td><td>No</td>
   </tr>
 
 </table>
