--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <tr class="item">
     <td><a href="http://pes-gm.org/" target="_blank">IEEE Power & Energy Society (PES) General Meeting</a></td>
-    <td>2011</td><td>A</td><td>E&S, T, V</td><td>Yes</td><td>Yes</td>
+    <td>?</td><td>A</td><td>E&S, T, V</td><td>Yes</td><td>Yes</td>
+  </tr>
+  <tr class="item">
+    <td><a href="http://www.ieeet-d.org/" target="_blank">IEEE Power & Energy Society (PES) T&D Conference</a></td>
+    <td>?</td><td>A</td><td>E&S, T, V</td><td>Yes</td><td>Yes</td>
+  </tr>
+  <tr class="item">
+    <td><a href="http://www.distributech.com/index.html" target="_blank">DistribuTECH Conference & Exhibition</a></td>
+    <td>?</td><td>A</td><td>E&S, T, V</td><td>No</td><td>No</td>
   </tr>
   <tr class="item">
     <td><a href="http://www.digitalbond.com/s4/" target="_blank">S4 ICS Cybersecurity Conference</a></td>
@@ -71,12 +79,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <td>2003</td><td>M</td><td>S</td><td>No</td><td>No</td>
   </tr>
 
+
 </table>
 <br>
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
       <h4>Type</h4>
-      <p>A - Held once a year.</p>
+      <p>A - Held once a year or every other year.</p>
       <p>B - Held twice a year.</p>
       <p>M - Held multiple times a year.</p>
     </div>
