--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <p class="w3-text-grey">Collection of Conferences, Events, Papers, and Authors</p>
   </div>
   <div class="w3-bar-block">
-    <a href="/Power-System-Cybersecurity-Conferences-Papers/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>EVENTS</a>
+    <a href="/Power-System-Cybersecurity-Conferences-Papers/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-calendar fa-fw w3-margin-right"></i>EVENTS</a>
+    <a href="/Power-System-Cybersecurity-Conferences-Papers/journals.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>JOURNALS</a>
     <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
-    <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
+    <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
 </nav>
 
@@ -52,7 +53,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
-
+      <center>
+        <a href="/Power-System-Cybersecurity-Conferences-Papers/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-calendar fa-fw w3-margin-right"></i>EVENTS</a>
+        <a href="/Power-System-Cybersecurity-Conferences-Papers/journals.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-flask fa-fw w3-margin-right"></i>JOURNALS</a>
+        <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
+        <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
+      </center>
   </footer>
 
 
