--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-bar-block">
     <a href="/Power-System-Cybersecurity-Conferences-Papers/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-calendar fa-fw w3-margin-right"></i>EVENTS</a>
     <a href="/Power-System-Cybersecurity-Conferences-Papers/journals.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>JOURNALS</a>
-    <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
+    <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
     <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
 </nav>
@@ -34,7 +34,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px">
+<div class="w3-main pagecontentcustom">
 
   <!-- Header -->
   <header id="portfolio">
