Init commit for HTML generator

--- a/HTML_Generator/HTML_Templates/index.html
+++ b/HTML_Generator/HTML_Templates/index.html
@@ -55,13 +55,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(5)')" style="cursor:pointer">Published</th>
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(6)')" style="cursor:pointer">Recorded</th>
     </tr>
-    <tr class="item"><td><a href="http://pes-gm.org/" target="_blank">IEEE Power & Energy Society (PES) General Meeting</a></td><td>?</td><td>A</td><td>E&S</td><td>T</td><td>V</td></tr>
-<tr class="item"><td><a href="http://www.ieeet-d.org/" target="_blank">IEEE Power & Energy Society (PES) T&D Conference</a></td><td>?</td><td>A</td><td>E&S</td><td>T</td><td>V</td></tr>
-<tr class="item"><td><a href="http://www.distributech.com/index.html" target="_blank">DistribuTECH Conference & Exhibition</a></td><td>?</td><td>A</td><td>E&S</td><td>T</td><td>V</td></tr>
-<tr class="item"><td><a href=" http://www.digitalbond.com/s4/" target="_blank">S4 ICS Cybersecurity Conference</a></td><td>2013</td><td>A</td><td>G</td><td>No</td><td>Yes</td></tr>
-<tr class="item"><td><a href="http://sites.ieee.org/pes-pscc/" target="_blank">IEEE-PES Technical Committee on Communications and Cybersecurity (PSCC)</a></td><td>2002</td><td>M</td><td>E&S</td><td>S</td><td>No</td></tr>
-<tr class="item"><td><a href="https://www.nerc.com/comm/CIPC/Pages/default.aspx" target="_blank">NERC Critical Infrastructure Protection Committee Meetings</a></td><td>2003</td><td>M</td><td>S</td><td>No</td><td>No</td></tr>
-
+    [tag_events]
 </table>
 <br>
   <div class="w3-row-padding">
