--- a/HTML_Generator/HTML_Templates/event.html
+++ b/HTML_Generator/HTML_Templates/event.html
@@ -36,39 +36,62 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <!-- !PAGE CONTENT! -->
 <div class="pagecontentcustom w3-main">
 
-  <!-- Header -->
+  <!-- Header I = Event Summary-->
   <header id="portfolio">
   <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
-    <h1><b>Events</b></h1>
+    <h1><b>Event Summary</b></h1>
     </div>
   </header>
 
-
-  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
-  <table id="myTable" class="w3-table-all">
-    [tag_events]
-</table>
-<br>
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <h4>Type</h4>
-      <p>A - Held once a year or every other year.</p>
-      <p>B - Held twice a year.</p>
-      <p>M - Held multiple times a year.</p>
+      <h4>Name: [tag_name]</h4>
+      <p>Type: [tag_type]</p>
+      <p>Year Started: [tag_started]</p>
+      <p>[tag_website]</p>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <h4>Category</h4>
-      <p> E&S - Engineering & Scientific </p>
-      <p> T - Tutorials </p>
-      <p> V - Vendor Exhibition </p>
-      <p> S - Standards Creation</p>
-      <p> G - General ICS* </p>
+      <p>[tag_categories]</p>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <h4>Stats </h4>
+      <p>Total Papers: [tag_TotalPapers]</p>
     </div>
   </div>
-  <p>* ICS - Industrial Control Systems</p>
-  <p><sup>1</sup> IEEE-PES Cybersecurity scope for Standards Creation was under Technical Committee on Subsations, Tehnical Committee on Relaying and Control.</p>
-<p>Note: Published here means the work presentated at the event is officially published in the form of a paper and can be scientifically referneced.</p>
+
+
+  <!-- Header II = Event Papers -->
+  <header id="portfolio">
+  <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
+    <div class="w3-container">
+    <h1><b>Papers</b></h1>
+    </div>
+  </header>
+
+  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
+  <table id="myTable" class="w3-table-all">
+    <tr>
+      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(1)')" style="cursor:pointer">Name</th>
+      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(2)')" style="cursor:pointer">Started</th>
+      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Type</th>
+      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(4)')" style="cursor:pointer">Category</th>
+      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(5)')" style="cursor:pointer">Published</th>
+      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(6)')" style="cursor:pointer">Recorded</th>
+    </tr>
+    <tr class="item"><td><a href="http://pes-gm.org/" target="_blank">IEEE Power & Energy Society (PES) General Meeting</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td></tr>
+<tr class="item"><td><a href="http://www.ieeet-d.org/" target="_blank">IEEE Power & Energy Society (PES) T&D Conference</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td></tr>
+<tr class="item"><td><a href="http://www.distributech.com/index.html" target="_blank">DistribuTECH Conference & Exhibition</a></td><td>?</td><td>A</td><td>E&S T V</td><td>No</td><td>No</td></tr>
+<tr class="item"><td><a href=" http://www.digitalbond.com/s4/" target="_blank">S4 ICS Cybersecurity Conference</a></td><td>2013</td><td>A</td><td>G</td><td>No</td><td>Yes</td></tr>
+<tr class="item"><td><a href="http://sites.ieee.org/pes-pscc/" target="_blank">IEEE-PES Technical Committee on Communications and Cybersecurity (PSCC)</a></td><td>2002</td><td>M</td><td>E&S S</td><td>No</td><td>No</td></tr>
+<tr class="item"><td><a href="https://www.nerc.com/comm/CIPC/Pages/default.aspx" target="_blank">NERC Critical Infrastructure Protection Committee Meetings</a></td><td>2003</td><td>M S</td><td>No</td><td>No</td><td>None</td></tr>
+<tr class="item"><td><a href=" http://ieee-isgt.org/" target="_blank">Innovative Smart Grid Technologies (ISGT) Conference</a></td><td> 2012</td><td> A</td><td> E&S T</td><td> Yes</td><td> No</td></tr>
+</table>
+
+
+<br>
+  <p><sup>1</sup> CPS - Examines the power system as a cyber-physical-system.</p>
 </div>
 
   <!-- Footer -->
@@ -86,36 +109,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </div>
 
 <script>
-// get the table element
-var $table = document.getElementById("myTable"),
-// number of rows per page
-$n = 5,
-// number of rows of the table
-$rowCount = $table.rows.length,
-// get the first cell's tag name (in the first row)
-$firstRow = $table.rows[0].firstElementChild.tagName,
-// boolean var to check if table has a head row
-$hasHead = ($firstRow === "TH"),
-// an array to hold each row
-$tr = [],
-// loop counters, to start count from rows[1] (2nd row) if the first row has a head tag
-$i,$ii,$j = ($hasHead)?1:0,
-// holds the first row if it has a (<TH>) & nothing if (<TD>)
-$th = ($hasHead?$table.rows[(0)].outerHTML:"");
-// count the number of pages
-var $pageCount = Math.ceil($rowCount / $n);
-// if we had one page only, then we have nothing to do ..
-if ($pageCount > 1) {
-    // assign each row outHTML (tag name & innerHTML) to the array
-    for ($i = $j,$ii = 0; $i < $rowCount; $i++, $ii++)
-        $tr[$ii] = $table.rows[$i].outerHTML;
-    // create a div block to hold the buttons
-    $table.insertAdjacentHTML("afterend","<div id='buttons'></div");
-    // the first sort, default page is the first one
-    sort(1);
-}
-
-
 // Script to open and close sidebar
 function w3_open() {
     document.getElementById("mySidebar").style.display = "block";
@@ -126,43 +119,6 @@ function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
     document.getElementById("myOverlay").style.display = "none";
 }
-
-// ($p) is the selected page number. it will be generated when a user clicks a button
-function sort($p) {
-    /* create ($rows) a variable to hold the group of rows
-    ** to be displayed on the selected page,
-    ** ($s) the start point .. the first row in each page, Do The Math
-    */
-    var $rows = $th,$s = (($n * $p)-$n);
-    for ($i = $s; $i < ($s+$n) && $i < $tr.length; $i++)
-        $rows += $tr[$i];
-
-    // now the table has a processed group of rows ..
-    $table.innerHTML = $rows;
-    // create the pagination buttons
-    document.getElementById("buttons").innerHTML = pageButtons($pageCount,$p);
-    // CSS Stuff
-    document.getElementById("id"+$p).setAttribute("class","active");
-}
-
-
-// ($pCount) : number of pages,($cur) : current page, the selected one ..
-function pageButtons($pCount,$cur) {
-    /* this variables will disable the "Prev" button on 1st page
-       and "next" button on the last one */
-    var $prevDis = ($cur == 1)?"disabled":"",
-        $nextDis = ($cur == $pCount)?"disabled":"",
-        /* this ($buttons) will hold every single button needed
-        ** it will creates each button and sets the onclick attribute
-        ** to the "sort" function with a special ($p) number..
-        */
-        $buttons = "<input type='button' value='&lt;&lt; Prev' onclick='sort("+($cur - 1)+")' "+$prevDis+">";
-    for ($i=1; $i<=$pCount;$i++)
-        $buttons += "<input type='button' id='id"+$i+"'value='"+$i+"' onclick='sort("+$i+")'>";
-    $buttons += "<input type='button' value='Next &gt;&gt;' onclick='sort("+($cur + 1)+")' "+$nextDis+">";
-    return $buttons;
-}
-
 </script>
 
 </body>
