--- a/index.html
+++ b/index.html
@@ -47,20 +47,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
   <table id="myTable" class="w3-table-all">
-    <tr>
-      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(1)')" style="cursor:pointer">Name</th>
-      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(2)')" style="cursor:pointer">Started</th>
-      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Type</th>
-      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(4)')" style="cursor:pointer">Category</th>
-      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(5)')" style="cursor:pointer">Published</th>
-      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(6)')" style="cursor:pointer">Recorded</th>
-    </tr>
-    <tr class="item"><td><a href="http://pes-gm.org/" target="_blank">IEEE Power & Energy Society (PES) General Meeting</a></td><td>?</td><td>A</td><td>E&S</td><td>T</td><td>V</td></tr>
-<tr class="item"><td><a href="http://www.ieeet-d.org/" target="_blank">IEEE Power & Energy Society (PES) T&D Conference</a></td><td>?</td><td>A</td><td>E&S</td><td>T</td><td>V</td></tr>
-<tr class="item"><td><a href="http://www.distributech.com/index.html" target="_blank">DistribuTECH Conference & Exhibition</a></td><td>?</td><td>A</td><td>E&S</td><td>T</td><td>V</td></tr>
-<tr class="item"><td><a href=" http://www.digitalbond.com/s4/" target="_blank">S4 ICS Cybersecurity Conference</a></td><td>2013</td><td>A</td><td>G</td><td>No</td><td>Yes</td></tr>
-<tr class="item"><td><a href="http://sites.ieee.org/pes-pscc/" target="_blank">IEEE-PES Technical Committee on Communications and Cybersecurity (PSCC)</a></td><td>2002</td><td>M</td><td>E&S</td><td>S</td><td>No</td></tr>
-<tr class="item"><td><a href="https://www.nerc.com/comm/CIPC/Pages/default.aspx" target="_blank">NERC Critical Infrastructure Protection Committee Meetings</a></td><td>2003</td><td>M</td><td>S</td><td>No</td><td>No</td></tr>
+    <tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/1" target="_blank">IEEE Power & Energy Society (PES) General Meeting</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td></tr>
+<tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/2" target="_blank">IEEE Power & Energy Society (PES) T&D Conference</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td></tr>
+<tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/3" target="_blank">DistribuTECH Conference & Exhibition</a></td><td>?</td><td>A</td><td>E&S T V</td><td>No</td><td>No</td></tr>
+<tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/4" target="_blank">S4 ICS Cybersecurity Conference</a></td><td>2013</td><td>A</td><td>G</td><td>No</td><td>Yes</td></tr>
+<tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/5" target="_blank">IEEE-PES Technical Committee on Communications and Cybersecurity (PSCC)</a></td><td>2002</td><td>M</td><td>E&S S</td><td>No</td><td>No</td></tr>
+<tr class="item"><td><a href="https://www.nerc.com/comm/CIPC/Pages/default.aspx" target="_blank">NERC Critical Infrastructure Protection Committee Meetings</a></td><td>2003</td><td>M S</td><td>No</td><td>No</td><td>None</td></tr>
+<tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/7" target="_blank">Innovative Smart Grid Technologies (ISGT) Conference</a></td><td>2012</td><td>A</td><td>E&S T</td><td>Yes</td><td>No</td></tr>
 
 </table>
 <br>
@@ -100,6 +93,36 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </div>
 
 <script>
+// get the table element
+var $table = document.getElementById("myTable"),
+// number of rows per page
+$n = 5,
+// number of rows of the table
+$rowCount = $table.rows.length,
+// get the first cell's tag name (in the first row)
+$firstRow = $table.rows[0].firstElementChild.tagName,
+// boolean var to check if table has a head row
+$hasHead = ($firstRow === "TH"),
+// an array to hold each row
+$tr = [],
+// loop counters, to start count from rows[1] (2nd row) if the first row has a head tag
+$i,$ii,$j = ($hasHead)?1:0,
+// holds the first row if it has a (<TH>) & nothing if (<TD>)
+$th = ($hasHead?$table.rows[(0)].outerHTML:"");
+// count the number of pages
+var $pageCount = Math.ceil($rowCount / $n);
+// if we had one page only, then we have nothing to do ..
+if ($pageCount > 1) {
+    // assign each row outHTML (tag name & innerHTML) to the array
+    for ($i = $j,$ii = 0; $i < $rowCount; $i++, $ii++)
+        $tr[$ii] = $table.rows[$i].outerHTML;
+    // create a div block to hold the buttons
+    $table.insertAdjacentHTML("afterend","<div id='buttons'></div");
+    // the first sort, default page is the first one
+    sort(1);
+}
+
+
 // Script to open and close sidebar
 function w3_open() {
     document.getElementById("mySidebar").style.display = "block";
@@ -110,6 +133,43 @@ function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
     document.getElementById("myOverlay").style.display = "none";
 }
+
+// ($p) is the selected page number. it will be generated when a user clicks a button
+function sort($p) {
+    /* create ($rows) a variable to hold the group of rows
+    ** to be displayed on the selected page,
+    ** ($s) the start point .. the first row in each page, Do The Math
+    */
+    var $rows = $th,$s = (($n * $p)-$n);
+    for ($i = $s; $i < ($s+$n) && $i < $tr.length; $i++)
+        $rows += $tr[$i];
+
+    // now the table has a processed group of rows ..
+    $table.innerHTML = $rows;
+    // create the pagination buttons
+    document.getElementById("buttons").innerHTML = pageButtons($pageCount,$p);
+    // CSS Stuff
+    document.getElementById("id"+$p).setAttribute("class","active");
+}
+
+
+// ($pCount) : number of pages,($cur) : current page, the selected one ..
+function pageButtons($pCount,$cur) {
+    /* this variables will disable the "Prev" button on 1st page
+       and "next" button on the last one */
+    var $prevDis = ($cur == 1)?"disabled":"",
+        $nextDis = ($cur == $pCount)?"disabled":"",
+        /* this ($buttons) will hold every single button needed
+        ** it will creates each button and sets the onclick attribute
+        ** to the "sort" function with a special ($p) number..
+        */
+        $buttons = "<input type='button' value='&lt;&lt; Prev' onclick='sort("+($cur - 1)+")' "+$prevDis+">";
+    for ($i=1; $i<=$pCount;$i++)
+        $buttons += "<input type='button' id='id"+$i+"'value='"+$i+"' onclick='sort("+$i+")'>";
+    $buttons += "<input type='button' value='Next &gt;&gt;' onclick='sort("+($cur + 1)+")' "+$nextDis+">";
+    return $buttons;
+}
+
 </script>
 
 </body>
