--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Power System Cybersecurity Conferences</title>
+<title>Power System Cybersecurity Events</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -14,19 +14,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
 <!-- Sidebar/menu -->
-<nav class="menusidebarcustom w3-sidebar w3-collapse w3-white w3-animate-left" id="mySidebar"><br>
+<nav class="menusidebarcustom w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;" id="mySidebar"><br>
   <div class="w3-container">
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <h4><b>Power System Cybersecurity Conferences</b></h4>
+    <h4><b>Power System Cybersecurity Events</b></h4>
     <p class="w3-text-grey">Collection of Conferences, Events, Papers, and Authors</p>
   </div>
   <div class="w3-bar-block">
     <a href="/Power-System-Cybersecurity-Conferences-Papers/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-calendar fa-fw w3-margin-right"></i>EVENTS</a>
-    <a href="/Power-System-Cybersecurity-Conferences-Papers/journals.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>JOURNALS</a>
-    <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
-    <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
+    <a href="/Power-System-Cybersecurity-Conferences-Papers/journals.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-flask fa-fw w3-margin-right"></i>JOURNALS</a>
+    <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
+    <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
 </nav>
 
@@ -34,29 +34,31 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main pagecontentcustom">
+<div class="pagecontentcustom w3-main">
 
   <!-- Header -->
   <header id="portfolio">
   <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
-    <h1><b>About Project</b></h1>
+    <h1><b>About</b></h1>
     </div>
   </header>
 
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
 
-    <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-    <hr>
-  </div>
+<br>
+  <p>* ICS - Industrial Control Systems</p>
+  <p><sup>1</sup> IEEE-PES Cybersecurity scope for Standards Creation was under Technical Committee on Subsations, Tehnical Committee on Relaying and Control.</p>
+<p>Note: Published here means the work presentated at the event is officially published in the form of a paper and can be scientifically referneced.</p>
+</div>
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
       <center>
         <a href="/Power-System-Cybersecurity-Conferences-Papers/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-calendar fa-fw w3-margin-right"></i>EVENTS</a>
         <a href="/Power-System-Cybersecurity-Conferences-Papers/journals.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-flask fa-fw w3-margin-right"></i>JOURNALS</a>
-        <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
+        <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
         <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
       </center>
   </footer>
@@ -66,6 +68,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </div>
 
 <script>
+
+
 // Script to open and close sidebar
 function w3_open() {
     document.getElementById("mySidebar").style.display = "block";
@@ -76,6 +80,7 @@ function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
     document.getElementById("myOverlay").style.display = "none";
 }
+
 </script>
 
 </body>
