--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-bar-block">
     <a href="/Power-System-Cybersecurity-Conferences-Papers/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-calendar fa-fw w3-margin-right"></i>EVENTS</a>
     <a href="/Power-System-Cybersecurity-Conferences-Papers/journals.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-flask fa-fw w3-margin-right"></i>JOURNALS</a>
-    <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
-    <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
+    <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
+    <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
 </nav>
 
@@ -48,9 +48,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
 
 <br>
-  <p>* ICS - Industrial Control Systems</p>
-  <p><sup>1</sup> IEEE-PES Cybersecurity scope for Standards Creation was under Technical Committee on Subsations, Tehnical Committee on Relaying and Control.</p>
-<p>Note: Published here means the work presentated at the event is officially published in the form of a paper and can be scientifically referneced.</p>
+<p>This project...</p>
 </div>
 
   <!-- Footer -->
@@ -58,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <center>
         <a href="/Power-System-Cybersecurity-Conferences-Papers/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-calendar fa-fw w3-margin-right"></i>EVENTS</a>
         <a href="/Power-System-Cybersecurity-Conferences-Papers/journals.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-flask fa-fw w3-margin-right"></i>JOURNALS</a>
-        <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
+        <a href="/Power-System-Cybersecurity-Conferences-Papers/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-question-circle fa-fw w3-margin-right"></i>ABOUT</a>
         <a href="/Power-System-Cybersecurity-Conferences-Papers/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
       </center>
   </footer>
