--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
 
 <br>
-  <p>* ICS - Industrial Control Systems</p>
-  <p><sup>1</sup> IEEE-PES Cybersecurity scope for Standards Creation was under Technical Committee on Subsations, Tehnical Committee on Relaying and Control.</p>
-<p>Note: Published here means the work presentated at the event is officially published in the form of a paper and can be scientifically referneced.</p>
+<p>email, website, twitter<p>
 </div>
 
   <!-- Footer -->
