Several Updates. Including working events page.

--- a/events/4/event.html
+++ b/events/4/event.html
@@ -45,18 +45,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </header>
 
   <div class="w3-container w3-padding-large">
-  <h3>[tag_name]</h3>
+  <h3>S4 ICS Cybersecurity Conference</h3>
   </div>
 
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <p>Type: [tag_type]</p>
+      <p>Type: Annual</p>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <p>Year Started: [tag_started]</p>
+      <p>Year Started: 2013</p>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <p><a href="[tag_website]">Event Website</a></p>
+      <p><a href=" http://www.digitalbond.com/s4/">Event Website</a></p>
     </div>
   </div>
 
@@ -64,11 +64,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
       <h4>Category</h4>
-      <p>[tag_categories]</p>
+      <p>General ICS, </p>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <h4>Stats </h4>
-      <p>Total Papers: [tag_TotalPapers]</p>
+      <p>Total Papers: 0</p>
     </div>
   </div>
 
@@ -88,7 +88,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(2)')" style="cursor:pointer">Author(s)</th>
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Year</th>
     </tr>
-    [tag_papers]
+    
   </table>
 
 <br>
