--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <table id="myTable" class="w3-table-all">
     <tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/1" target="_blank">IEEE Power & Energy Society (PES) General Meeting</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td></tr>
 <tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/2" target="_blank">IEEE Power & Energy Society (PES) T&D Conference</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td></tr>
-<tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/3" target="_blank">DistribuTECH Conference & Exhibition</a></td><td>?</td><td>A</td><td>E&S T V</td><td>No</td><td>No</td></tr>
+<tr class="item"><td><a href="http://www.distributech.com/index.html" target="_blank">DistribuTECH Conference & Exhibition</a></td><td>?</td><td>A</td><td>E&S T V</td><td>No</td><td>No</td></tr>
 <tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/4" target="_blank">S4 ICS Cybersecurity Conference</a></td><td>2013</td><td>A</td><td>G</td><td>No</td><td>Yes</td></tr>
 <tr class="item"><td><a href="/Users/jaw004/workspaces/pscyberconf/events/5" target="_blank">IEEE-PES Technical Committee on Communications and Cybersecurity (PSCC)</a></td><td>2002</td><td>M</td><td>E&S S</td><td>No</td><td>No</td></tr>
 <tr class="item"><td><a href="https://www.nerc.com/comm/CIPC/Pages/default.aspx" target="_blank">NERC Critical Infrastructure Protection Committee Meetings</a></td><td>2003</td><td>M S</td><td>No</td><td>No</td><td>None</td></tr>
