--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
 
 <br>
-<p>This project...</p>
+<p>This project is being led by <a href="http://www.nathanswallace.org/">Dr. Nathan Wallace</a> <a href="https://twitter.com/NathanSWallace">(@NathanSWallace)</a>. It seeks to provide a collection of conferences, events, papers, and authors that are seeking to advance the field of power system cybersecurity. </p>
 </div>
 
   <!-- Footer -->
