--- a/events/1/event.html
+++ b/events/1/event.html
@@ -68,7 +68,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <h4>Stats </h4>
-      <p>Total Papers: 48</p>
+      <p>Total Papers: 71</p>
     </div>
   </div>
 
@@ -136,6 +136,29 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6344960" target="_blank">Applying self-healing schemes to modern power distribution systems</a></td><td>J. R. AgÌ_ero</td><td>2012</td></tr>
 <tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6344866" target="_blank">Impacts of control and communication system vulnerabilities on power systems under contingencies</a></td><td>M. Rahnamay-Naeini; Z. Wang; A. Mammoli; M. M. Hayat</td><td>2012</td></tr>
 <tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6345518" target="_blank">Reliability modeling of cyber-physical electric power systems: A system-theoretic framework</a></td><td>A. D. DomÌ_nguez-GarcÌ_a</td><td>2012</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039214" target="_blank">A multi-layer, hierarchical information management system for the smart grid</a></td><td>N. Lu; P. Du; P. Paulson; F. Greitzer; X. Guo; M. Hadley</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6038996" target="_blank">Wireless AMI application and security for controlled home area networks</a></td><td>V. Aravinthan; V. Namboodiri; S. Sunku; W. Jewell</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6038941" target="_blank">Smart grid communication requirements for the high voltage power system</a></td><td>P. Kansal; A. Bose</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039177" target="_blank">Innovative strategies for protection security assessment</a></td><td>C. Romeis; J. Fuchs; J. Jaeger; R. Krebs</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039759" target="_blank">Toward more secure, stronger and smarter electric power grids</a></td><td>S. M. Amin</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039120" target="_blank">Protecting the smart grid: A risk based approach</a></td><td>S. L. Clements; H. Kirkham; M. Elizondo; S. Lu</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039845" target="_blank">An evaluation of cybersecurity assessment tools on a SCADA environment</a></td><td>A. Hahn; M. Govindarasu</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039873" target="_blank">Moving beyond defense-in-depth to strategic resilience for critical control systems</a></td><td>H. Khurana</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039165" target="_blank">Performance of power electronic interfaced DERs integrated with communication network</a></td><td>R. Majumder; G. Bag; S. Chakrabarti</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039815" target="_blank">Modeling of communication latency in smart grid</a></td><td>C. P. Nguyen; A. J. Flueck</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039124" target="_blank">What is reliable smart grid?</a></td><td>E. Litvinov</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039786" target="_blank">Cyber security analysis for the power grid using the virtual control systems environment</a></td><td>J. Stamp; V. Urias; B. Richardson</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6038911" target="_blank">Online conditional anomaly detection in multivariate data for transformer monitoring</a></td><td>V. Catterson; S. McArthur; G. Moss</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039895" target="_blank">The challenge of IT-enabled policy design for sustainable electric energy systems</a></td><td>M. D. Iliï¿½ï¿½</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039347" target="_blank">Multi-criteria optimization of an energy storage system within a Virtual Power Plant architecture</a></td><td>P. Lombardi; M. StÌ¦tzer; Z. Styczynski; A. Orths</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039375" target="_blank">An intrusion and defense testbed in a cyber-power system environment</a></td><td>J. Hong; S. S. Wu; A. Stefanov; A. Fshosha; C. C. Liu; P. Gladyshev; M. Govindarasu</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039494" target="_blank">Towards a risk-based network operation and design standards</a></td><td>G. Strbac; R. Moreno; D. Pudjianto; M. Castro</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039164" target="_blank">Virtual power plants for isolated and jointly operating electric power supply systemsï¿½ Perspectives and challenges for Russia</a></td><td>D. N. Efimov; K. V. Suslov; N. I. Voropai</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039589" target="_blank">Cyber risk assessment of power control systemsï¿½ A metrics weighed by attack experiments</a></td><td>G. Dondossola; F. Garrone; J. Szanto</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039697" target="_blank">Artificial immune system based intrusion detection in a distributed hierarchical network architecture of smart grid</a></td><td>Y. Zhang; L. Wang; W. Sun; R. C. Green; M. Alam</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039641" target="_blank">A new index for evaluating protection vulnerability</a></td><td>S. J. Park; S. J. Lee; M. S. Cho; T. W. Kim; S. T. Kim; J. H. Kim</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039809" target="_blank">Data integrity attack and its impacts on voltage control loop in power grid</a></td><td>S. Sridhar; G. Manimaran</td><td>2011</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6039371" target="_blank">Survey of tools for risk assessment of cascading outages</a></td><td>M. Papic; K. Bell; Y. Chen; I. Dobson; L. Fonte; E. Haq; P. Hines; D. Kirschen; X. Luo; S. S. Miller; N. Samaan; M. Vaiman; M. Varghese; P. Zhang</td><td>2011</td></tr>
 
   </table>
 
