--- a/HTML_Generator/HTML_Templates/event.html
+++ b/HTML_Generator/HTML_Templates/event.html
@@ -56,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <p>Year Started: [tag_started]</p>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <p><a href="[tag_website]">Event Website</a></p>
+      <p><a href="[tag_website] target='_blank'">Event Website</a></p>
     </div>
   </div>
 
