--- a/events/5/event.html
+++ b/events/5/event.html
@@ -56,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <p>Year Started: 2002</p>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <p><a href="http://sites.ieee.org/pes-pscc/">Event Website</a></p>
+      <p><a href="http://sites.ieee.org/pes-pscc/ target='_blank'">Event Website</a></p>
     </div>
   </div>
 
