--- a/events/1/event.html
+++ b/events/1/event.html
@@ -56,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <p>Year Started: ?</p>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <p><a href="http://pes-gm.org/">Event Website</a></p>
+      <p><a href="http://pes-gm.org/ target='_blank'">Event Website</a></p>
     </div>
   </div>
 
@@ -68,7 +68,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <h4>Stats </h4>
-      <p>Total Papers: 71</p>
+      <p>Total Papers: 95</p>
     </div>
   </div>
 
@@ -88,7 +88,31 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(2)')" style="cursor:pointer">Author(s)</th>
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Year</th>
     </tr>
-    <tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6345588" target="_blank">Data exchange in self-healing applications for power distribution networks</a></td><td>I. Dzafic; N. Lecek; T. Donlagic</td><td>2012</td></tr>
+    <tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672100" target="_blank">Intrusion Detection System for IEC 60870-5-104 based SCADA networks</a></td><td>Y. Yang; K. McLaughlin; T. Littler; S. Sezer; B. Pranggono; H. F. Wang</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672305" target="_blank">Solar Commercial Virtual Power Plant</a></td><td>B. Zwaenepoel; J. I. Laveyne; L. Vandevelde; T. L. Vandoorn; B. Meersman; G. Van Eetvelde</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672944" target="_blank">Multi-agent testbed for emerging power systems</a></td><td>M. J. Stanovich; S. K. Srivastava; D. A. Cartes; T. L. Bevis</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672081" target="_blank">Bandwidth and latency requirements for smart transmission grid applications</a></td><td>P. Kansal; A. Bose</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672956" target="_blank">Application of the undetectability index to design reliable metering systems for bad data processing</a></td><td>R. A. S. Benedito; L. F. C. Alberto; N. G. Bretas; J. B. A. London</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672537" target="_blank">Cyber physical system approach for design of power grids: A survey</a></td><td>S. K. Khaitan; J. D. McCalley</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672314" target="_blank">Progressive switching attacks for instigating cascading failures in smart grid</a></td><td>S. Liu; Bo Chen; D. Kundur; T. Zourntos; K. Butler-Purry</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6673056" target="_blank">Wireless communication for controlling microgrids: Co-simulation and performance evaluation</a></td><td>Rukun Mao; Huijuan Li; Yan Xu; Husheng Li</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672366" target="_blank">Toward real-time detection of critical contingency of large power systems</a></td><td>H. D. Chiang; Wang Lei</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672786" target="_blank">Distribution network topology error correction using smart meter data analytics</a></td><td>W. Luan; J. Peng; M. Maras; J. Lo</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672067" target="_blank">Towards a 3-level blackout probabilistic risk assessment: Achievements and challenges</a></td><td>P. Henneaux; F. Faghihi; P. E. Labeau; J. C. Maun</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672249" target="_blank">Partial discharge impulsive noise in electricity substations and the impact on 2.4 GHz and 915 MHz ZigBee communications</a></td><td>J. Jia; J. Meng</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672293" target="_blank">Security-based circuit breaker maintenance management</a></td><td>P. Dehghanian; M. Kezunovic; G. Gurrala; Y. Guan</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672453" target="_blank">A real-time power allocation algorithm for dispersed energy storages and its communication network design</a></td><td>M. Zhang; H. Xin; Z. Lu; D. Gan; J. Seuss</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672850" target="_blank">Coordination of system planning and operation using probabilistic risk assessment method</a></td><td>P. Zhang; Y. Hou; Guangyi Liu</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672625" target="_blank">The next generation energy information gateway for use in residential and commercial environments</a></td><td>D. Arnold; M. Sankur; D. M. Auslander</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672893" target="_blank">Prevention of NERC C3 category outages in Idaho power's network: Risk based methodology and practical application</a></td><td>M. Papic; O. Ciniglio</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672355" target="_blank">An adaptive method for detection and correction of errors in PMU measurements</a></td><td>Di Shi; D. Tylavsky; N. Logic</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672740" target="_blank">Impact of cyber attacks on transient stability of smart grids with voltage support devices</a></td><td>B. Chen; S. Mashayekh; K. L. Butler-Purry; D. Kundur</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672750" target="_blank">Data traffic analysis of utility smart metering network</a></td><td>W. Luan; D. Sharp; S. LaRoy</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672794" target="_blank">Autonomous operation of multiple interconnected microgrids with self-healing capability</a></td><td>F. Shahnia; R. P. S. Chandrasena; S. Rajakaruna; A. Ghosh</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672478" target="_blank">Multi-Agent based Smart Grid management and simulation: Situation awareness and learning in a test bed with simulated and real installations and players</a></td><td>H. Morais; Z. Vale; T. Pinto; L. Gomes; F. Fernandes; P. Oliveira; C. Ramos</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672737" target="_blank">A preliminary study of power system reliability evaluation considering cyber attack effects</a></td><td>Yichi Zhang; Lingfeng Wang; Weiqing Sun</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6672972" target="_blank">Managing critical transmission infrastructure with advanced analytics and smart sensors</a></td><td>Q. Qiu; J. A. Fleeman; D. R. Ball; G. Rackliffe; J. Hou; L. Cheim</td><td>2013</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6345588" target="_blank">Data exchange in self-healing applications for power distribution networks</a></td><td>I. Dzafic; N. Lecek; T. Donlagic</td><td>2012</td></tr>
 <tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6345585" target="_blank">The information hierarchy for the future grid</a></td><td>P. W. Sauer</td><td>2012</td></tr>
 <tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6344790" target="_blank">Anomaly detection of building systems using energy demand frequency domain analysis</a></td><td>M. Wrinch; T. H. M. EL-Fouly; S. Wong</td><td>2012</td></tr>
 <tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6344789" target="_blank">Online systems potential applications in intelligent power grids</a></td><td>H. I. Elsayed; B. K. Johnson; L. L. Lai</td><td>2012</td></tr>
