--- a/events/2/event.html
+++ b/events/2/event.html
@@ -68,7 +68,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <h4>Stats </h4>
-      <p>Total Papers: 0</p>
+      <p>Total Papers: 16</p>
     </div>
   </div>
 
@@ -88,7 +88,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(2)')" style="cursor:pointer">Author(s)</th>
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Year</th>
     </tr>
-    
+    <tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6863166" target="_blank">A network delay compensation technique for wide-area SVC damping controller in power system</a></td><td>B. P. Padhy; S. C. Srivastava; N. K. Verma</td><td>2014</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6863270" target="_blank">Improvement of timing reliability and data transfer security of synchrophasor measurements</a></td><td>L. Zhan; D. Zhou; T. King; Y. Liu; E. Johannessen; J. Alexander; B. Boza</td><td>2014</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6863287" target="_blank">Using distributed intelligence and wireless communication to control and coordinate multiple capacitor banks</a></td><td>M. Ibrahim; M. M. A. Salama</td><td>2014</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6863537" target="_blank">Cyber security applied to P&C IEDs</a></td><td>J. L. Sarralde; J. M. Yarza</td><td>2014</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6863469" target="_blank">Impact of UPFC on power system reliability considering its cyber vulnerability</a></td><td>Y. Xiang; Y. Zhang; L. Wang; W. Sun</td><td>2014</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6863411" target="_blank">Faults and failures in cyber-power interdependent networks</a></td><td>B. Falahati; Y. Fu</td><td>2014</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7519927" target="_blank">Reference architecture for Self Healing distribution networks</a></td><td>T. Berry; Y. Chollot</td><td>2016</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7519909" target="_blank">Utilizing relay event reports to identify settings error and avoid relay misoperations</a></td><td>S. Das; S. Santoso</td><td>2016</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7519964" target="_blank">Challenges of implementing substation hardware upgrades for NERC CIP version 5 compliance to enhance cybersecurity</a></td><td>J. M. Cole</td><td>2016</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7519859" target="_blank">Distributed load shedding over directed communication networks with time delays</a></td><td>T. Yang; Di Wu</td><td>2016</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7520087" target="_blank">Critical line identification for hypothesized multiple line attacks against power systems</a></td><td>Ming Wang; Yingmeng Xiang; Lingfeng Wang; D. Yu; Jie Jiang</td><td>2016</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7519871" target="_blank">Perimeter substation physical security design options for compliance with NERC CIP 014-1</a></td><td>B. P. Kelley</td><td>2016</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7520076" target="_blank">Advanced metering infrastructure: Technology and challenges</a></td><td>A. K. Chakraborty; N. Sharma</td><td>2016</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7519889" target="_blank">Protecting the Communications Network at Layer 2</a></td><td>V. Umasuthan</td><td>2016</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7519890" target="_blank">A fog computing solution for advanced metering infrastructure</a></td><td>Y. Yan; W. Su</td><td>2016</td></tr>
+<tr class="item"><td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7519984" target="_blank">Cyber physical simulation and remote testing of Remedial Action Schemes</a></td><td>A. Mallikeswaran; T. Ashwarya; S. Niddodi; A. Srivastava; D. E. Bakken; P. Panciatici</td><td>2016</td></tr>
+
   </table>
 
 <br>
@@ -113,7 +129,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 // get the table element
 var $table = document.getElementById("myTable"),
 // number of rows per page
-$n = 10,
+$n = 25,
 // number of rows of the table
 $rowCount = $table.rows.length,
 // get the first cell's tag name (in the first row)
