--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Category</th>
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Published</th>
       <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Recorded</th>
+      <th onclick="w3.sortHTML('#myTable', '.item', 'td:nth-child(3)')" style="cursor:pointer">Total Items</th>
     </tr>
-    <tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/1/event.html" target="_blank">IEEE Power & Energy Society (PES) General Meeting</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td></tr>
-<tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/2/event.html" target="_blank">IEEE Power & Energy Society (PES) T&D Conference</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td></tr>
-<tr class="item"><td><a href="http://www.distributech.com/index.html" target="_blank">DistribuTECH Conference & Exhibition</a></td><td>?</td><td>A</td><td>E&S T V</td><td>No</td><td>No</td></tr>
-<tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/4/event.html" target="_blank">S4 ICS Cybersecurity Conference</a></td><td>2013</td><td>A</td><td>G</td><td>No</td><td>Yes</td></tr>
-<tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/5/event.html" target="_blank">IEEE-PES Technical Committee on Communications and Cybersecurity (PSCC)</a></td><td>2002</td><td>M</td><td>E&S S</td><td>No</td><td>No</td></tr>
-<tr class="item"><td><a href="https://www.nerc.com/comm/CIPC/Pages/default.aspx" target="_blank">NERC Critical Infrastructure Protection Committee Meetings</a></td><td>2003</td><td>M S</td><td>No</td><td>No</td><td>None</td></tr>
-<tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/7/event.html" target="_blank">Innovative Smart Grid Technologies (ISGT) Conference</a></td><td>2012</td><td>A</td><td>E&S T</td><td>Yes</td><td>No</td></tr>
+    <tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/1/event.html" target="_blank">IEEE Power & Energy Society (PES) General Meeting</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td><td>307</td></tr>
+<tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/2/event.html" target="_blank">IEEE Power & Energy Society (PES) T&D Conference</a></td><td>?</td><td>A</td><td>E&S T V</td><td>Yes</td><td>Yes</td><td>16</td></tr>
+<tr class="item"><td><a href="http://www.distributech.com/index.html" target="_blank">DistribuTECH Conference & Exhibition</a></td><td>?</td><td>A</td><td>E&S T V</td><td>No</td><td>No</td><td>?</td></tr>
+<tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/4/event.html" target="_blank">S4 ICS Cybersecurity Conference</a></td><td>2013</td><td>A</td><td>G</td><td>No</td><td>Yes</td><td>0</td></tr>
+<tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/5/event.html" target="_blank">IEEE-PES Technical Committee on Communications and Cybersecurity (PSCC)</a></td><td>2002</td><td>M</td><td>E&S S</td><td>No</td><td>No</td><td>0</td></tr>
+<tr class="item"><td><a href="https://www.nerc.com/comm/CIPC/Pages/default.aspx" target="_blank">NERC Critical Infrastructure Protection Committee Meetings</a></td><td>2003</td><td>M S</td><td>No</td><td>No</td><td>None</td><td>?</td></tr>
+<tr class="item"><td><a href="/Power-System-Cybersecurity-Conferences-Papers/events/7/event.html" target="_blank">Innovative Smart Grid Technologies (ISGT) Conference</a></td><td>2012</td><td>A</td><td>E&S T</td><td>Yes</td><td>No</td><td>0</td></tr>
 
 </table>
 <br>
